# holochain-1

./: CHANGELOG.md  Cargo.toml  config.nix
crates/hc_bundle/src/: packing.rs
crates/holochain/: CHANGELOG.md  Cargo.toml
crates/holochain_state/: Cargo.toml
crates/holochain_types/: Cargo.toml
crates/holochain_zome_types/: Cargo.toml
crates/release-automation/: Cargo.toml
crates/release-automation/src/: changelog.rs  crate_selection.rs  main.rs
crates/release-automation/src/crate_selection/: mod.rs
crates/release-automation/src/crate_selection/tests/: mod.rs
crates/release-automation/src/fixtures/changelog_aggregation/: CHANGELOG_expected.md
crates/release-automation/src/fixtures/changelog_aggregation/crates/holochain_zome_types/: CHANGELOG.md
crates/release-automation/src/fixtures/example_workspace/: CHANGELOG.md  Cargo.toml
crates/release-automation/src/fixtures/example_workspace/crates/holochain/: CHANGELOG.md  Cargo.toml
crates/release-automation/src/fixtures/example_workspace/crates/holochain_zome_types/: CHANGELOG.md  Cargo.toml
crates/release-automation/src/fixtures/example_workspace/crates/unreleasable/: CHANGELOG.md  Cargo.toml
crates/release-automation/src/tests/: workspace_mocker.rs
crates/release-automation/src/tests/fixtures/example_workspace/: Cargo.toml
crates/release-automation/src/tests/fixtures/example_workspace/crates/excluded/: Cargo.toml
crates/release-automation/src/tests/fixtures/example_workspace/crates/holochain_zome_types/: Cargo.toml
crates/state/: Cargo.toml
nix/pkgs/: core.nix
(+10 files in other folders)
