[package]
name = "release-automation"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10"
yaml-rust = "0.4.5"
structopt = "0.3"
pulldown-cmark = "0.8"
bstr = "0.2"
cargo = "0.52"
once_cell = "1.7"
anyhow = "1.0"
semver = "0.11"
serde = "1.0"
serde_yaml = "0.8"
educe = "0.4"

[dev-dependencies]
prettydiff = "0.4"
tempfile = "3"
cargo-test-support = { git = "https://github.com/rust-lang/cargo", branch = "rust-1.52.0" }
git2 = "0.13"
